--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ Django==3.2.20
 django-allauth==0.54.0
 django-crispy-forms==1.14.0
 django-filter==2.4.0
+djangorestframework==3.14.0
 idna==3.4
+msvc-runtime==14.29.30133
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.7.0
@@ -17,6 +19,7 @@ pytz==2018.5
 requests==2.31.0
 requests-oauthlib==1.3.1
 shortuuid==1.0.11
+sqlite-bro==0.12.1
 sqlparse==0.4.4
 typing_extensions==4.6.3
 tzdata==2023.3
