--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ defusedxml==0.7.1
 Django==3.2.23
 django-allauth==0.54.0
 django-crispy-forms==1.14.0
+django-debug-toolbar==4.3.0
 django-filter==2.4.0
 djangorestframework==3.14.0
 idna==3.4
+msvc-runtime==14.29.30133
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.7.0
